# GMTheory

./: .gitignore  .gitmodules  Doxyfile  LICENSE  README.md  meson.build
docs/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classgmtheory_1_1_g_chord-members.html  classgmtheory_1_1_g_chord.html  classgmtheory_1_1_g_chord_1_1_i_notification-members.html  classgmtheory_1_1_g_chord_1_1_i_notification.html  classgmtheory_1_1_g_chord_1_1_i_notification__coll__graph.map  classgmtheory_1_1_g_chord_1_1_i_notification__coll__graph.md5  classgmtheory_1_1_g_chord_1_1_notification-members.html  classgmtheory_1_1_g_chord_1_1_notification.html  classgmtheory_1_1_g_chord_1_1_notification__coll__graph.map  classgmtheory_1_1_g_chord_1_1_notification__coll__graph.md5  classgmtheory_1_1_g_chord__coll__graph.map  classgmtheory_1_1_g_chord__coll__graph.md5  classgmtheory_1_1_g_chord_database-members.html  classgmtheory_1_1_g_chord_database.html  classgmtheory_1_1_g_chord_database__coll__graph.map  classgmtheory_1_1_g_chord_database__coll__graph.md5  classgmtheory_1_1_g_chord_modifier-members.html  classgmtheory_1_1_g_chord_modifier.html  classgmtheory_1_1_g_chord_modifier__coll__graph.map  classgmtheory_1_1_g_chord_modifier__coll__graph.md5  classgmtheory_1_1_g_chord_template-members.html  classgmtheory_1_1_g_chord_template.html  classgmtheory_1_1_g_chord_template__coll__graph.map  classgmtheory_1_1_g_chord_template__coll__graph.md5  classgmtheory_1_1_g_harmony-members.html  classgmtheory_1_1_g_harmony.html  classgmtheory_1_1_g_harmony__coll__graph.md5  classgmtheory_1_1_g_harmony__inherit__graph.map  classgmtheory_1_1_g_scale-members.html  classgmtheory_1_1_g_scale.html  classgmtheory_1_1_g_scale__coll__graph.map  classgmtheory_1_1_g_scale__coll__graph.md5  conceptgmtheory_1_1_range_of_chords.html  conceptgmtheory_1_1_range_of_note_names.html  conceptgmtheory_1_1_range_of_note_values.html  conceptgmtheory_1_1_range_of_range_of_note_values.html  concepts.html  (+207 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  concepts_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+30 more)
src/: g_chord_database.cpp  g_chord_database.hpp  g_chord_modifiers.cpp  g_chord_modifiers.hpp  g_chord_template.hpp  g_chords.cpp  g_chords.hpp  g_harmony.hpp  g_note_chars.hpp  g_note_intervals.cpp  g_note_intervals.hpp  g_notes.cpp  g_notes.hpp  g_scale_degrees.cpp  g_scale_degrees.hpp  g_scales.cpp  g_scales.hpp  gchorddatabase.cpp  gchorddatabase.hpp  gchordmodifiers.cpp  gchordmodifiers.hpp  gchords.cpp  gchords.hpp  gchordtemplate.hpp  gharmony.hpp  gnotechars.hpp  gnoteintervals.cpp  gnoteintervals.hpp  gnotes.cpp  gnotes.hpp  gscaledegrees.cpp  gscaledegrees.hpp  gscales.cpp  gscales.hpp
test/: g_chord_database_test.cpp  g_chords_test.cpp  g_harmony_test.cpp  g_note_intervals_test.cpp  g_notes_test.cpp  g_scales_test.cpp  gchorddatabasetest.cpp  gchordtest.cpp  gdictionarytest.cpp  gharmonytest.cpp  gnotestest.cpp  gscaletest.cpp  noteintervalstest.cpp  run_tests.cpp  runtests.cpp
